# salt-layers

./: .gitignore  Dockerfile  Makefile  README.md  apply-state-layer  circle.yml  setup.cfg  tox.ini
build.d/: 20-salt-masterless
salt_layers/apply/: __init__.py  __main__.py
tools/: pip-requires
