[metadata]
name = salt-layers
summary = Salt Layers - Use Salt effectively (and fully optionally) as a part of your Docker image build process
description-file = README.md
url = https://github.com/akatrevorjay/salt-layers
author = Trevor Joynson
author-email = pypi@trevor.joynson.io
license = GPL3
keywords =
    salt
    saltstack
    layers
    docker
    container
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    salt_layers

#data_files =
#    etc/pbr = etc/*
#    etc/init =
#        pbr.packaging.conf
#        pbr.version.conf

[entry_points]
console_scripts =
    salt-apply-state-layer = salt_layers.apply:main

